--- a/todo-ninja/package.json
+++ b/todo-ninja/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "date-fns": "^2.16.1",
+    "firebase": "^8.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuetify": "^2.2.11"
